# MA_engineer_custom_remote

controller/: CMakeLists.txt  package.xml
controller/config/: serial.yaml
controller/include/: controller.h  ma_serial.hpp
controller/launch/: controller_start.launch
controller/src/: controller.cpp  crc.cpp  main.cpp
controller_msgs/: CMakeLists.txt  package.xml
controller_msgs/msg/: myimu.msg
imu/: CMakeLists.txt  package.xml
imu/config/: imu1.yaml  imu2.yaml  imu3.yaml
imu/launch/: imu_pub.launch
imu/src/: imu1_pub.cpp  imu2_pub.cpp  imu3_pub.cpp
